style.css
html {
    height: 100%;
}

body {
    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./backgrounds/pexels-josh-sorenson-1714205.jpg");
    background-size: cover;
    background-blend-mode: darken;
    background-repeat: no-repeat;
    background-attachment: fixed;
    color: white;
}

.ml-20 {
    margin-left: 20px;
}

.mh-20 {
    max-height: 30px;
    padding-top: 5px;
}

.br-8{
    border-radius: 8px;
}

/*Display*/
.imageDisplay {
    position: relative;
    display: inline-block;
}

.arrowHitbox {
    height: 100%;
    width: 35px;
    position: absolute;
    top: 0px;
    border-radius: 15px;
}

.ahbRight {
    right: 0px;
}


.arrowHitbox:hover {
    background-color: rgba(0, 0, 0, 0.4);
}

.arrow {
    border: solid rgb(218, 211, 211);
    border-width: 0 5px 5px 0;
    display: inline-block;
    padding: 3px;
    position: absolute;
    top: 50%;
    right: 10px;
}

.right {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
}

.left {
    transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
}

/* sidebar menu */
.listItems{
    background-color:rgb(147, 71, 71);
    padding: 2px 12px 2px 10px;
    border-radius: 10px;
    position: fixed;
    display: none;
}
.sidenav {
    height: 100%;
    /* Full-height: remove this if you want "auto" height */
    width: 200px;
    /* Set the width of the sidebar */
    position: fixed;
    /* Fixed Sidebar (stay in place on scroll) */
    z-index: 1;
    /* Stay on top */
    top: 0;
    /* Stay at the top */
    left: 0px;
    background-color: #111;
    /* Black */
    overflow-x: hidden;
    /* Disable horizontal scroll */
    padding-top: 50px;
}

.navElement {
    display: flex;
    margin-top: 7px;
}

.navElement>img {
    max-width: 36px;
    margin-top: 6px;
}

/* The navigation menu links */
.sidenav a {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    text-align: start;
    font-family: 'Roboto', sans-serif;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
    color: #f1f1f1;
}


/*Common*/
.title {
    text-align: center;
    font-family: 'Roboto', sans-serif;
    font-size: clamp(14px, 20px, 2vw);
}

.logo {
    width: 40%;
    max-width: 60px;
}

.logoGitHub{
    max-width: 50px;
}

.flex {
    display: flex;
    align-items: center;
    flex-direction: column;
    line-height: 1.6;
}

.flex-row {
    display: flex;
    align-items: center;
    justify-content: center;
}

.container {

    width: 75%;
    max-width: 850px;
    border-style: solid;
    border-radius: 15px;
    border-width: 1px;
    padding: 40px;
    ;
}

.description {
    font-family: 'Roboto', sans-serif;
    text-align: start;
    font-size: clamp(14px, 20px, 2vw);
}

/*index Page*/
.summaryContainer {
    display: flex;
    flex-wrap: wrap;
}

.summaryContainer>a>img {
    max-width: 200px;
}

@media screen and (max-width: 450px) {
    .summaryContainer>a>img {
        max-width: 65px;
    }
}

/*C Page*/
.invert {
    filter: invert(100%);
}

.box {
    border-style: solid;
    border-width: 1px;
    border-radius: 20px;
    background-color: rgba(0, 0, 0, 0.2);
    padding: 15px;
}

.displayedImages {
    margin-top: 3%;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.exampleImages {
    margin-left: 1%;
    width: 100%;
    max-width: 585px;
    border-radius: 8px;
}
.indexImages{
    margin-left: 1%;
    max-width: 585px;
}

.no-decoration {
    text-decoration: none;
    color: #fa5e43;
}

.no-decoration:visited {
    text-decoration: none;
    color: #fa5e43;
}

/*Blender Page*/

.projectContainer {
    margin-top: 20px;
}

.projectImages {
    width: 100%;
    max-width: 585px;
    border-radius: 10px;
}


/* Media */
@media screen and (max-width: 450px) {
    .sidenav {
        display: none;
        left: -200px;
        animation: slide 0.5s forwards;
    }
    .listItems{
        display: block;
    }
}

@-webkit-keyframes slide {
    100% { left: 0; }
}

@keyframes slide {
    100% { left: 0; }
}

